# rust-slog-structured-logging

./: Cargo.toml  README.md
src/: bar.rs  foo.rs  logging.rs  main.rs
